update BatchMetricsCollector, part 1 - change to use job GUID as the key for job metrics, recorded by arrival time